--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 plotly
 pandas
 streamlit
-git+https://doocs-git.desy.de:doocs/library/python/pydoocs.git
+git+doocs-git.desy.de:doocs/library/python/pydoocs.git
