--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 plotly
 pandas
 streamlit
-git+doocs-git.desy.de:doocs/library/python/pydoocs.git
+git+http://doocs-git.desy.de/cgit/doocs/library/python/pydoocs.git
